use dist umd as main file

--- a/static/index.html
+++ b/static/index.html
@@ -3,9 +3,11 @@
 		<link rel="stylesheet" href="bootstrap.min.css" />
 		<title>test</title>
 	</head>
-  <body>
-
-  	<div id="app" class="container"></div>
-    <script src="/lib/bundle.js"></script>
-  </body>
+	<body>
+		<div class="p-y-3">
+			<div id="app" class="container"></div>
+		</div>
+		
+		<script src="/lib/bundle.js"></script>
+	</body>
 </html>
